[package]
name = "voyager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
encoding_rs = "0.8.34"
lopdf = "0.33.0"
regex = "1.10.5"
rust_xlsxwriter = "0.73.0"
serde = { version = "1.0.204", features = ["derive"] }
